--- a/UI/css/admin-profile.css
+++ b/UI/css/admin-profile.css
@@ -1,10 +1,3 @@
-.user-details {
-
-}
-
-
-
-
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
@@ -22,7 +15,7 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 
-#edit-record:hover {
+.edit:hover {
     color:red;
 }
 .delete {
