--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body{
 	background-color: #f4f4f4;
-    margin:0;
-    padding:0;
+  margin:0;
+  padding:0;
+  min-height: 100%;
 }
 
 .container{
@@ -78,8 +79,11 @@ footer {
       rgb(73, 74, 76),
       rgb(181, 189, 201)
     );
+    right: 0;
+    bottom: 0;
+    left: 0;
     min-height: 65px;
-    margin-top: 50px;
+    margin-top: -50px;
 }
   
   footer h3 {
