--- a/css/user-profile.css
+++ b/css/user-profile.css
@@ -1,10 +1,3 @@
-.user-details {
-
-}
-
-
-
-
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
@@ -31,4 +24,8 @@ tr:nth-child(even) {
 
 .delete:hover{
     color:gray;
+}
+
+#user-footer {
+    position: absolute;
 }
