--- a/css/style.css
+++ b/css/style.css
@@ -51,12 +51,13 @@ header {
 
   
 .btn {
-    width: 100%;
+    width: 50%;
     background: gray;
     border-bottom: 2px solid gray;
     border-radius: 50px;
     padding: 5px;
     margin: 12px 0px;
+    margin-left: 25%;
     cursor: pointer;
     font-size: 18px;
     font-weight: bold;
