--- a/css/create-record.css
+++ b/css/create-record.css
@@ -25,7 +25,7 @@ border-radius: 5px;
 margin-bottom: 100px;
 }
 
-input,
+.inputBttn,
 textarea,select {
 display: block;
 width: 100%;
@@ -45,3 +45,8 @@ margin: 1rem 0;
 width: auto;
 cursor: pointer;
 }
+
+#select-type {
+  position: relative;
+}
+
