--- a/css/user-profile.css
+++ b/css/user-profile.css
@@ -7,18 +7,32 @@
     color:red;
 }
 
+.tbody {
+    width:80%;
+    padding:5%;
+    border-radius: 2%;
+    border-left:none;
+    border-bottom:none;
+    background-color: rgb(221, 219, 219);
+}
 
 table {
-    font-family: arial, sans-serif;
+    font-family: "Segeo UI", sans-serif;
     border-collapse: collapse;
     width: 100%;
-    margin-bottom: 210px
+    margin-bottom: 210px;
+    padding:5%;
 }
 
 td, th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 5px;
+}
+
+th{
+    background-color: black;
+    color: white;
 }
 
 tr:nth-child(even) {
@@ -37,5 +51,5 @@ tr:nth-child(even) {
 }
 
 #user-footer {
-    position: absolute;
+    position: relative;
 }
