--- a/css/user-profile.css
+++ b/css/user-profile.css
@@ -36,7 +36,7 @@ th{
 }
 
 tr:nth-child(even) {
-    background-color: #dddddd;
+    background-color: white;
 }
 
 #edit-record:hover {
@@ -52,4 +52,52 @@ tr:nth-child(even) {
 
 #user-footer {
     position: relative;
+}
+
+
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr { 
+		display: block; 
+	}
+	
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	
+	tr { border: 1px solid #ccc; }
+	
+	td { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+		padding-left: 50%; 
+	}
+	
+	td:before { 
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 45%; 
+		padding-right: 10px; 
+		white-space: nowrap;
+	}
+	
+	/*
+	Label the data
+	*/
+	td:nth-of-type(1):before { content: "CreatedOn"; }
+	td:nth-of-type(2):before { content: "Type"; }
+	td:nth-of-type(3):before { content: "Location"; }
+	td:nth-of-type(4):before { content: "Status"; }
+	td:nth-of-type(5):before { content: "More"; }
 }
